Fixed broken resizing of the window in the Files app's audio player.
This patch resolves numerous issues and improvements:
- Too small window inexpanded mode (changed from 3 to 5 items).
- Window automatically switches the expanded mode while resizing.
- It is possible now to resize the window to see more items.
- The size of the window in the expanded mode is now remembered.

TEST=Manual tests, browser_tests.
BUG=271814

Review URL: https://chromiumcodereview.appspot.com/22840010

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@218194 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 1a662f20c0652c9f2bf7e576bde6d7ae109143c8

--- a/chrome/browser/resources/file_manager/css/audio_player.css
+++ b/chrome/browser/resources/file_manager/css/audio_player.css
@@ -92,10 +92,10 @@ body {
   -webkit-box-align: center;
   -webkit-box-orient: vertical;
   -webkit-box-pack: start;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
   display: -webkit-box;
   overflow-x: hidden;
   overflow-y: auto;
+  top: 0;
 }
 
 /* A single track container.
